策略模式 新增3连发开火策略

--- a/src/main/resources/config
+++ b/src/main/resources/config
@@ -1,2 +1,6 @@
 #初始敌方坦克数量
 initEnemyCount=10
+tankSpeed=4
+bulletSpeed=4
+weFireStrategy=org.protoss.strategy.TripleFireStrategy
+enemyFireStrategy=org.protoss.strategy.DefaultFireStrategy
