1.调停者模式 是对象的行为模式，包装了一系列对象相互作用的方式。使得这些对象不必相互显式引用，通过一个中介对象进行引用通知，从而对象之间解耦。 具体实现：GameModel GameModel对外是门面模式，对内是调停者模式
2.责任链模式
将请求的发送者和请求的处理者解耦
通过碰撞责任链检测碰撞，并且责任链也实现Collider接口，以后有多条链可以直接add

--- a/src/main/resources/config
+++ b/src/main/resources/config
@@ -1,6 +1,8 @@
 #初始敌方坦克数量
-initEnemyCount=10
+initEnemyCount=5
 tankSpeed=4
 bulletSpeed=4
 weFireStrategy=org.protoss.strategy.TripleFireStrategy
 enemyFireStrategy=org.protoss.strategy.DefaultFireStrategy
+#碰撞责任链
+colliders=org.protoss.cor.BulletTankCollider,org.protoss.cor.TankTankCollider
