1.GameObject抽象出width，height 2.装饰者模式（碰撞失效还没改）

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,12 @@
 hs_err_pid*
 
 /.idea/
+/src/test
+target/classes/META-INF/
+target/classes/audio/
+target/classes/config
+target/classes/images/
+target/classes/logback.xml
+target/generated-sources/
+target/generated-test-sources/
+target/test-classes/META-INF/
