--- a/.gitignore
+++ b/.gitignore
@@ -25,12 +25,8 @@
 hs_err_pid*
 
 /.idea/
-/src/test
-target/classes/META-INF/
-target/classes/audio/
-target/classes/config
-target/classes/images/
-target/classes/logback.xml
-target/generated-sources/
-target/generated-test-sources/
-target/test-classes/META-INF/
+target/
+NetTest/src/test/
+NetTest/target/
+src/test/
+
