--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>NetTest</module>
         <module>Server</module>
         <module>Client</module>
+        <module>Common</module>
     </modules>
 
     <properties>
