--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -13,7 +13,7 @@
     <dependencies>
         <dependency>
             <groupId>org.protoss</groupId>
-            <artifactId>Common</artifactId>
+            <artifactId>Client</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
