服务器地址写在配置文件中

--- a/Client/src/main/resources/config.properties
+++ b/Client/src/main/resources/config.properties
@@ -1,11 +1,14 @@
-#ÓÎÏ·´°¿Ú´óĞ¡
+#æ¸¸æˆçª—å£å¤§å°
 gameWidth=800
 gameHeight=800
-#³õÊ¼µĞ·½Ì¹¿ËÊıÁ¿
+#åˆå§‹æ•Œæ–¹å¦å…‹æ•°é‡
 initEnemyCount=5
 tankSpeed=4
 bulletSpeed=4
 weFireStrategy=org.protoss.strategy.TripleFireStrategy
 enemyFireStrategy=org.protoss.strategy.DefaultFireStrategy
-#Åö×²ÔğÈÎÁ´
+#ç¢°æ’è´£ä»»é“¾
 colliders=org.protoss.cor.BulletTankCollider,org.protoss.cor.TankTankCollider,org.protoss.cor.BulletWallCollider
+#æœåŠ¡å™¨åœ°å€
+ServerHost=127.0.0.1
+ServerPort=8888
