--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
             <artifactId>netty-all</artifactId>
             <version>${netty-version}</version>
         </dependency>
-
+        
     </dependencies>
     <build>
         <plugins>
@@ -57,6 +57,7 @@
                     <source>8</source>
                     <target>8</target>
                 </configuration>
+                <version>3.8.1</version>
             </plugin>
         </plugins>
     </build>
